<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Crazypetals</string>
    <string name="mix_panel_token">44105cbc5ed53f064fdaeb535c658eb1</string>
    <string name="oops_no_internet_connection">Oops! No Internet Connection</string>
    <string name="please_check_your_connection_and_try_again">Please check your connection and try again</string>
    <string name="oops_no_results_found">Oops! No Results Found</string>
    <string name="please_try_again_later_or_try_something_else">Please try again later or try something else</string>
    <string name="oops_something_went_wrong">Oops! Something went wrong</string>
    <string name="please_try_again">Please try again</string>
    <string name="refresh">Refresh</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">
        com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior
    </string>
    <string name="try_again">Try Again</string>
    <string name="check_internet_connection">Please check your internet connection.</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="menu_home">Home</string>
    <string name="menu_my_order">Orders</string>
    <string name="name">
        <font fgcolor="black">Name :</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="booked">Your order has been booked successfully,
        we will contact you shortly for order confirmation.
    </string>
    <string name="contact_no">
        <font fgcolor="black">Contact Number :</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="email">
        <font fgcolor="black">Email :</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="area_pincode">
        <font fgcolor="black">Area(Pincode) :</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="order_details">
        <font fgcolor="black">Order Details :</font>
    </string>
    <string name="delivery_address">Delivery Address :</string>
    <string name="submit">Submit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_actual_price">
        <strike>300</strike>
    </string>
    <string name="title_cart_view">Cart</string>
    <string name="message_percent_discount">UP TO %1$d%% OFF</string>
    <string name="menu_wish_list">Wish List</string>
    <string name="menu_request_booking">Request Booking</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about_us">About Us</string>
    <string name="title_mangoes">Mangos</string>
    <string name="title_up_to_20_off">UP TO 20% OFF</string>
    <string name="browse_by_category">Browse by category</string>
    <string name="title_desserts">Desserts</string>
    <string name="title_discounted_price">RS 200</string>
    <string name="title_loading">Loading data</string>
    <string name="title_is_available">Available</string>
    <string name="title_view_all">View All</string>
    <string name="title_hello">Hello </string>
    <string name="title_emoji">&#128522;</string>
    <string name="title_subcategory">Edible oil</string>
    <string name="title_booking_successful">Booking Successful</string>
    <string name="title_categories">Categories</string>
    <string name="title_request_booking">Request Booking</string>
    <string name="title_wish_list">Wish List</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_my_order">Orders</string>
    <string name="title_settings">Settings</string>
    <string name="title_faqs">FAQs</string>
    <string name="title_about_us">About Us</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="kerala_mini_mart">Kerala Mini Mart</string>
    <string name="contact_No">Contact Number</string>
    <string name="mobile_No">+919673085787</string>
    <string name="app_email_id">CrazypetalsHelp@gmail.com</string>
    <string name="visit_us_at">Visit us at</string>
    <string name="address">Flat-57, 3rd floor, lift no-2, Tulsidas apartment, Opposite to j j garden, camp 411001, Pune, MAHARASHTRA
    </string>
    <string name="request_booking_name" tools:ignore="ExtraTranslation">Enter name</string>
    <string name="request_booking_description" tools:ignore="TypographyEllipsis">Lorem lpsum is simply dummy text of the
        printing and typesettings industry. Lorem lpsum… The first line of
        Lorem lpsum, Lorem lpsum dolor sit amet...,comes...
    </string>
    <string name="request_booking_address">301,octave Complex ,Baner Road,near Subway,Baner,Pune-411045</string>
    <string name="request_booking_email">xyz@gmail.com</string>
    <string name="request_booking_contact_no">Enter contact number</string>
    <string name="search_min_characters_to_search">Please enter minimum 3 characters to search</string>
    <string name="selectUser">
        <font fgcolor="black">Select User</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="message_contact_admin">Something went wrong, Please contact to Admin.</string>
    <string name="message_item_added">Item added to wish list</string>
    <string name="message_item_removed">Item removed from wish list</string>
    <string name="order_detail_hint">
        I want to buy, \n• Product one - 1 packet - color
        \n• Product two - 2 kg - color
    </string>
    <string name="order_detail_data">I want to buy,\n</string>
    <string name="message_coming_soon">Coming Soon</string>
    <string name="message_enable_location">Please enable your location from settings</string>
    <string name="message_something_went_wrong">Something went wrong</string>
    <string name="message_press_back_button">Press BACK again to exit</string>
    <string name="title_in_stock">In stock</string>
    <string name="title_out_of_stock">Out of stock</string>
    <string name="message_place_order">Place order</string>
    <string name="title_browse_more">Browse More</string>
    <string name="title_add_items">Add Items</string>
    <string name="title_start_shopping">Start Shopping</string>
    <string name="title_book_appintment">Book Appointment</string>
    <string name="title_empty_wishlist">Empty Wish List!</string>
    <string name="title_empty_order_list">Empty Order List!</string>
    <string name="title_empty_appointment_list">No Appointments!</string>
    <string name="message_add_some_items_in_wishlist_to_make_me_happy">Add some items in wish list to make me happy!</string>
    <string name="message_add_some_items_in_order">You haven\'t placed any order yet!</string>
    <string name="message_book_appointment">You haven\'t booked any appointment yet!</string>
    <string name="title_product_details">VIEW DETAILS</string>
    <string name="title_total_items">Total items ( %d )</string>
    <string name="title_cart">Cart</string>
    <string name="title_order_status">Order Status</string>
    <string name="title_delivery_schedule">Delivery Schedule</string>
    <string name="title_checkbox_wish_list">Add products from wish list</string>
    <string name="mobile_no">
        <font fgcolor="#4f4f4f">Mobile number</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="flat_no">
        <font fgcolor="#4f4f4f">Flat No /House No /Floor /Building</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="locality">
        <font fgcolor="#4f4f4f">Colony /Street /Landmark</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="pin_code">
        <font fgcolor="#4f4f4f">Pin code</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="area">
        <font fgcolor="#4f4f4f">Area /Locality</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="city">
        <font fgcolor="#4f4f4f">City</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="state">
        <font fgcolor="#4f4f4f">State</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="country">
        <font fgcolor="#4f4f4f">Country</font>
        <font fgcolor="red">*</font>
    </string>
    <string name="add_address">Add Address</string>
    <string name="message_delivery_address">Delivery Address</string>
    <string name="message_select_preferable_address">Please select preferable address</string>
    <string name="select_address">Please select address</string>
    <string name="title_added_to_cart">Added to cart</string>
    <string name="product_detail_brand_name">Brand :</string>
    <string name="product_detail_colour">Color variant :</string>
    <string name="product_detail_header_short_description">Key features :</string>
    <string name="validation_enter_name">Please enter your name</string>
    <string name="validation_empty_space">Please do not add blank spaces</string>
    <string name="validation_name_length">Please enter maximum 100 characters</string>
    <string name="validation_enter_number">Please enter your mobile number</string>
    <string name="validation_number">Please enter a valid mobile number</string>
    <string name="validation_enter_email">Please enter your email address</string>
    <string name="validation_email">Please enter a valid email address</string>
    <string name="validation_enter_order_detail">Please enter the order details</string>
    <string name="empty_wish_list">Your wish list is empty</string>
    <string name="request_booking_checkbox_alert">This will clear previously added products in order details. Do you
        want to continue?
    </string>
    <string name="success_booking_delivery_date">Your order will deliver probably on</string>
    <string name="message_spinner">Please select area to deliver your order</string>
    <string name="dayAndTime">Delivery Time :</string>
    <string name="payment_mode">Payment Mode :</string>
    <string name="order_no">Order No :</string>
    <string name="app_update_message">New version is available. Please update application.</string>
    <string name="app_update">Update</string>
    <string name="app_update_later">Not Now</string>
    <string name="app_update_info">New Version</string>
    <string name="cash_on_delivery">COD</string>
    <string name="area_pincode_validation">Please select area and pincode</string>
    <string name="intent_data_title">title</string>
    <string name="fragment_tag">TAG</string>
    <string name="subCategoryName">Products</string>
    <string name="spinner_select">Select</string>
    <string name="delivery_location_to_pass_day">DeliveryLocationToPassDay</string>
    <string name="delivery_location_to_pass_time">DeliveryLocationToPassTime</string>
    <string name="order_number_to_pass">OrderNumber</string>
    <string name="intent_banner_search">BannerSearch</string>
    <string name="forceful_update">Forcefull</string>
    <string name="menu_login_signup">Login/Signup</string>
    <string name="menu_logout">Logout</string>
    <string name="text_precautions">Precautions:</string>
    <string name="value_precautions">Use drycleaners only.</string>
    <string name="text_delivery_time">Delivery Time</string>
    <string name="value_delivery_time">Order will be delivered in 7 days</string>
    <string name="title_description">Description </string>
    <string name="appointment_no">#1234567890</string>
    <string name="appointment_date">12/12/2019</string>
    <string name="appointment_time">5pm to 6pm</string>
    <string name="appointment_status">Status: Confirmed</string>
    <string name="contact_no_appointment">Contact No. :</string>
    <string name="appointment_type">Appointment Type :</string>
    <string name="title_date">Date :</string>
    <string name="title_time">Time :</string>
    <string name="text_appointment_detail">Need customization in jewellery.</string>
</resources>